--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "axios": "^1.5.1",
     "chalk": "^5.3.0",
     "express": "^4.18.2",
-    "querystring": "^0.2.1"
+    "querystring": "^0.2.1",
+    "ytdl": "^1.4.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
