--- a/package.json
+++ b/package.json
@@ -14,8 +14,14 @@
     "axios": "^1.5.1",
     "chalk": "^5.3.0",
     "express": "^4.18.2",
+    "http": "^0.0.1-security",
     "querystring": "^0.2.1",
-    "ytdl": "^1.4.1"
+    "socket.io": "^4.7.4",
+    "ws": "^8.16.0",
+    "youtube-music-api": "^1.0.6",
+    "youtube-search-without-api-key": "^2.0.1",
+    "ytdl": "^1.4.1",
+    "ytmusic-api": "^5.2.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
